# rust_project_plain

./: .markdownlint.json  Cargo.toml  bash_create_rust_project_plain.ipynb  bash_trap.md  box.md  check_parameter_is_set_default_value.sh  cleanup.sh  infinite.sh  project_path.md  rust_project_plain.ipynb  rust_project_plain.md  test_trap.sh
.cspell/: custom-dictionary-workspace.txt
.ipynb_checkpoints/: bash_create_rust_project_plain-checkpoint.ipynb
examples/: demo.rs
rust_project_plain/: Cargo.toml
src/: main.rs
