[package]
name = "rust_project_plain"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
sys-info = "0.9"
rustc_version = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"